--- a/osi_analytic_segments_expenses/views/hr_expense_views.xml
+++ b/osi_analytic_segments_expenses/views/hr_expense_views.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <!-- Copyright 2019 Open Source Integrators
-         License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
+         License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 
     <record id="view_expenses_tree_segments" model="ir.ui.view">
         <field name="name">hr.expense.tree.segments</field>
@@ -10,9 +10,10 @@
         <field name="type">tree</field>
         <field name="inherit_id" ref="hr_expense.view_expenses_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']" position='after'>
-                <field name="analytic_segment_one"/>
-                <field name="analytic_segment_two"/>
+            <xpath expr="//field[@name='analytic_account_id']"
+                   position='after'>
+                <field name="analytic_segment_one_id"/>
+                <field name="analytic_segment_two_id"/>
             </xpath>
         </field>
     </record>
@@ -23,9 +24,10 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="hr_expense.hr_expense_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']" position='after'>
-                <field name="analytic_segment_one"/>
-                <field name="analytic_segment_two"/>
+            <xpath expr="//field[@name='analytic_account_id']"
+                   position='after'>
+                <field name="analytic_segment_one_id"/>
+                <field name="analytic_segment_two_id"/>
             </xpath>
         </field>
     </record>
@@ -35,9 +37,10 @@
         <field name="model">hr.expense.sheet</field>
         <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//tree/field[@name='analytic_account_id']" position='after'>
-                <field name="analytic_segment_one"/>
-                <field name="analytic_segment_two"/>
+            <xpath expr="//tree/field[@name='analytic_account_id']"
+                   position='after'>
+                <field name="analytic_segment_one_id"/>
+                <field name="analytic_segment_two_id"/>
             </xpath>
         </field>
     </record>
