--- a/osi_payment_method/views/account_invoice_views.xml
+++ b/osi_payment_method/views/account_invoice_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="invoice_supplier_tree_payment_method" model="ir.ui.view">
@@ -6,11 +6,9 @@
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_supplier_tree"/>
         <field name="arch" type="xml">
-            <data>
-                <xpath expr="//tree/field[@name ='origin']" position="after">
-                    <field name="payment_method"/>
-                </xpath>
-            </data>
+            <xpath expr="//tree/field[@name ='origin']" position="after">
+                <field name="payment_method"/>
+            </xpath>
         </field>
     </record>
 
@@ -19,25 +17,25 @@
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_form"/>
         <field name="arch" type="xml">
-            <data>
-                <xpath expr="//field[@name ='payment_term_id']" position="after">
-                    <field name="payment_method" widget="selection" attrs="{'readonly':True}"/>
-                </xpath>
-            </data>
+            <xpath expr="//field[@name ='payment_term_id']"
+                   position="after">
+                <field name="payment_method" widget="selection"/>
+            </xpath>
         </field>
     </record>
 
     <record id="invoice_form_payment_method_editable" model="ir.ui.view">
         <field name="name">invoice.form.payment.method.editable</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="osi_payment_method.invoice_form_payment_method"/>
-        <field name="groups_id" eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
+        <field name="inherit_id"
+               ref="osi_payment_method.invoice_form_payment_method"/>
+        <field name="groups_id"
+               eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
         <field name="arch" type="xml">
-            <data>
-                <xpath expr="//field[@name ='payment_method']" position="attributes">
-                    <attribute name="readonly">False</attribute>
-                </xpath>
-            </data>
+            <xpath expr="//field[@name ='payment_method']"
+                   position="attributes">
+                <attribute name="readonly">False</attribute>
+            </xpath>
         </field>
     </record>
 
@@ -46,25 +44,27 @@
         <field name="model">account.invoice</field>
         <field name="inherit_id" ref="account.invoice_supplier_form"/>
         <field name="arch" type="xml">
-            <data>
-                <xpath expr="//field[@name ='date_due']" position="after">
-                    <field name="payment_method" widget="selection" attrs="{'readonly':True}"/>
-                </xpath>
-            </data>
+            <xpath expr="//field[@name ='date_due']" position="after">
+                <field name="payment_method" widget="selection"/>
+            </xpath>
         </field>
     </record>
 
-    <record id="invoice_supplier_form_payment_method_editable" model="ir.ui.view">
-        <field name="name">invoice.supplier.form.payment.method.editable</field>
+    <record id="invoice_supplier_form_payment_method_editable"
+            model="ir.ui.view">
+        <field name="name">invoice.supplier.form.payment.method.editable
+        </field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="osi_payment_method.invoice_supplier_form_payment_method"/>
-        <field name="groups_id" eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
+        <field name="inherit_id"
+               ref="osi_payment_method.invoice_supplier_form_payment_method"/>
+        <field name="groups_id"
+               eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
         <field name="arch" type="xml">
-            <data>
-                <xpath expr="//field[@name ='payment_method']" position="attributes">
-                    <attribute name="readonly">False</attribute>
-                </xpath>
-            </data>
+            <xpath expr="//field[@name ='payment_method']"
+                   position="attributes">
+                <attribute name="readonly">False</attribute>
+            </xpath>
         </field>
     </record>
+
 </odoo>
