--- a/osi_payment_method/views/res_partner.xml
+++ b/osi_payment_method/views/res_partner.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="view_res_partner_form_payment_method" model="ir.ui.view">
