--- a/osi_analytic_segments_sales/views/sale_order_view.xml
+++ b/osi_analytic_segments_sales/views/sale_order_view.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <!-- Copyright 2019 Open Source Integrators
-         License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
+         License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 
     <!-- Inherit sale order form -->
     <record id="view_order_form" model="ir.ui.view">
@@ -10,15 +10,12 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']" position="after">
-                <field name="analytic_segment_one" />
-                <field name="analytic_segment_two" />
-            </xpath>
-            <xpath expr="//field[@name='order_line']/tree//field[@name='price_unit']" position="before">
-                <field name="analytic_account_id"/>
-                <field name="analytic_segment_one"/>
-                <field name="analytic_segment_two"/>
+            <xpath expr="//field[@name='analytic_account_id']"
+                   position="after">
+                <field name="analytic_segment_one_id"/>
+                <field name="analytic_segment_two_id"/>
             </xpath>
         </field>
     </record>
+
 </odoo>
