--- a/helpdesk_stock/views/stock_request_order.xml
+++ b/helpdesk_stock/views/stock_request_order.xml
@@ -7,6 +7,9 @@
             <field name="picking_policy" position="after">
                 <field name="helpdesk_ticket_id"/>
             </field>
+            <field name="stock_request_ids" position="attributes">
+              <attribute name="context">{'default_helpdesk_ticket_id': helpdesk_ticket_id,'default_expected_date': expected_date,'default_picking_policy':picking_policy,'default_warehouse_id': warehouse_id,'default_direction': direction,'default_location_id': location_id,'default_procurement_group_id': procurement_group_id,'default_company_id': company_id,'default_state': state}</attribute>
+            </field>
             <xpath expr="//field[@name='stock_request_ids']/tree/field[@name='direction']" position="after">
                 <field name="helpdesk_ticket_id" invisible="1"/>
             </xpath>
