--- a/avatax_connector/views/partner_view.xml
+++ b/avatax_connector/views/partner_view.xml
@@ -38,7 +38,9 @@
                                     <group col="4" colspan="4">
                                         <field name="tax_exempt"/>
 	                       <newline/>
+			       		<!-- Avalara recomemnded to use exemption code only, and not exemption number:
 			               <field name="exemption_number" attrs="{'invisible': [('tax_exempt','!=',True)]}"/>
+				       -->
 			               <field name="exemption_code_id" attrs="{'invisible': [('tax_exempt','!=',True)]}"/>
                                 </group>
 	          		</group>
