--- a/avatax_connector/views/account_invoice_view.xml
+++ b/avatax_connector/views/account_invoice_view.xml
@@ -41,7 +41,7 @@
                     <field name="exemption_code" readonly="1"/>
                     <field name="exemption_code_id" readonly="1"/>
                     <field name="location_code" />
-                    <field name="warehouse_id" options="{'no_create': True}" groups="stock.group_locations"/>
+                    <field name="warehouse_id" options="{'no_create': True}" groups="stock.group_stock_multi_warehouses"/>
                     <field name="is_add_validate" readonly="1" invisible="1"/>
                 </xpath>
 
