--- a/sale_subscription_brand/views/sale_subscription_views.xml
+++ b/sale_subscription_brand/views/sale_subscription_views.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
-	<record id="sale_subscription_view_form_brand" model="ir.ui.view">
-		<field name="name">sale.subscription.form.view.brand</field>
-		<field name="model">sale.subscription</field>
-		<field name="inherit_id" ref="sale_subscription.sale_subscription_view_form"/>
-		<field name="arch" type="xml">
-			<xpath expr="//field[@name='partner_id']" position="after">
-				<field name="brand"/>
-			</xpath>
-		</field>
-	</record>
 
-	
+<odoo>
+
+    <!-- Copyright (C) 2019 Open Source Integrators
+         License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
+
+    <record id="sale_subscription_view_form_brand" model="ir.ui.view">
+        <field name="name">sale.subscription.form.view.brand</field>
+        <field name="model">sale.subscription</field>
+        <field name="inherit_id"
+               ref="sale_subscription.sale_subscription_view_form"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="brand_id"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
