--- a/osi_payment_method/views/res_partner_views.xml
+++ b/osi_payment_method/views/res_partner_views.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+     <!-- Copyright (C) 2019 Open Source Integrators
+          License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
     <record id="view_res_partner_form_payment_method" model="ir.ui.view">
         <field name="name">res.partner.form.payment.method</field>
@@ -7,7 +9,7 @@
         <field name="inherit_id" ref="account.view_partner_property_form"/>
         <field name="arch" type="xml">
             <data>
-                <xpath expr="//field[@name ='currency_id']" position="after">
+                <xpath expr="//field[@name='currency_id']" position="after">
                     <field name="payment_method" widget="selection"/>
                 </xpath>
             </data>
