--- a/osi_payment_method/views/purchase_views.xml
+++ b/osi_payment_method/views/purchase_views.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <!-- Copyright (C) 2019 Open Source Integrators
+         License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
     <record id="purchase_order_form_payment_method" model="ir.ui.view">
         <field name="name">purchase.order.form.payment.method</field>
@@ -7,7 +9,7 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <data>
-                <xpath expr="//field[@name ='date_order']" position="after">
+                <xpath expr="//field[@name='date_order']" position="after">
                     <field name="payment_method" widget="selection"/>
                 </xpath>
             </data>
@@ -24,7 +26,7 @@
                eval="[(6, 0, [ref('purchase.group_purchase_manager')])]"/>
         <field name="arch" type="xml">
             <data>
-                <xpath expr="//field[@name ='payment_method']"
+                <xpath expr="//field[@name='payment_method']"
                        position="attributes">
                     <attribute name="readonly">False</attribute>
                 </xpath>
