--- a/helpdesk_fieldservice/views/res_partner.xml
+++ b/helpdesk_fieldservice/views/res_partner.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <button name="action_open_helpdesk_ticket" position="attributes">
-                <attribute name="context">{'default_partner_id': active_id, 'default_fsm_location_id': service_location_id}</attribute>
+                <attribute name="context">{'default_partner_id': id, 'default_fsm_location_id': service_location_id}</attribute>
             </button>
         </field>
     </record>
