--- a/avatax_connector/views/sale_order_view.xml
+++ b/avatax_connector/views/sale_order_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        
+
         <record id="group_avatax_view" model="res.groups">
             <field name="name">Avalara Order Line View</field>
         </record>
-        
+
         <record id="sale_order_update_form_view" model="ir.ui.view">
             <field name="name">sale.order.update.form.view</field>
             <field name="model">sale.order</field>
@@ -30,38 +30,30 @@
                 <xpath expr="/form/sheet/notebook/page[1]/field[@name='order_line']/tree/field[@name='price_unit']" position="after">
                     <field name="tax_amt" readonly="1" groups="avatax_connector.group_avatax_view"/>
                 </xpath>
-                
-                
+
+
                 <xpath expr="/form/sheet/notebook/page[1]/field[@name='order_line']/form/group/group/field[@name='price_unit']" position="after">
                     <field name="tax_amt" readonly="1" groups="avatax_connector.group_avatax_view"/>
                 </xpath>
-                
+
                 <field name="payment_term_id" position="after">
                     <field name="exemption_code" readonly="1"/>
                     <field name="exemption_code_id" readonly="1"/>
                     <field name="warehouse_id" options="{'no_create': True}" groups="stock.group_stock_multi_warehouses"/>
                     <field name="location_code"/>
+                    <field name="tax_on_shipping_address" />
                     <field name="is_add_validate" readonly="1" invisible="1"/>
                 </field>
-                
-                <xpath expr="/form/sheet/group" position="after">
-                    <group colspan="4" col="4" string="Avalara Tax on...">
-                        <group colspan="2" col="2">
-                            <field name="tax_add_default"/>
-                            <field name="tax_add_invoice"/>
-                            <field name="tax_add_shipping"/>
-                        </group>
-                        <group colspan="2" col="2">
+
+                <field name="fiscal_position_id" position="after">
                             <field name="tax_add_id" context="{'show_address': 1}"
                                 options='{"always_reload": True}' readonly="1"/>
-                            <!--<field name="tax_address" readonly="1"/>-->
-                        </group>
-                    </group>
-                </xpath>
+                </field>
+
             </field>
         </record>
-        
-		
+
+
         <record id="sale_order_form_view_editable_field" model="ir.ui.view">
             <field name="name">sale.order.form.view.editable</field>
             <field name="model">sale.order</field>
@@ -76,6 +68,6 @@
                 </field>
             </field>
         </record>
-                 
+
     </data>
 </odoo>
