--- a/sale_subscription_suspend/views/sale_subscription.xml
+++ b/sale_subscription_suspend/views/sale_subscription.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding='UTF-8'?>
 <odoo>
    <record id="subscription_suspension_form_view" model="ir.ui.view">
         <field name="name">subscription.suspension.form.view</field>
@@ -6,7 +5,7 @@
         <field name="inherit_id"
                ref="sale_subscription.sale_subscription_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//button[@name='recurring_invoice']" position="after">
+            <xpath expr="//button[last()]" position="after">
                 <button string="Suspend"
                         name="action_suspend"
                         id="action_suspend"
