--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -19,7 +19,7 @@
                 <page string="Service Orders">
                     <button name="action_create_order" string="Create FSM Order" type="object" class="oe_highlight"/>
                     <field name="fsm_order_ids">
-                        <tree>
+                        <tree create="false">
                             <field name="name" style="pointer-events:none;"/>
                             <field name="customer_id" style="pointer-events:none;"/>
                             <field name="location_id" style="pointer-events:none;"/>
