--- a/avatax_connector/views/account_invoice_action.xml
+++ b/avatax_connector/views/account_invoice_action.xml
@@ -1,6 +1,6 @@
 <odoo>
     <record model="ir.actions.server" id="action_account_invoice_compute_taxes">
-        <field name="name">Update taxes with Avatax</field>
+        <field name="name">Update taxes with AvaTax</field>
         <field name="model_id" ref="account.model_account_invoice"/>
         <field name="binding_model_id" ref="account.model_account_invoice" />
         <field name="state">code</field>
