--- a/avatax_connector/views/sale_order_action.xml
+++ b/avatax_connector/views/sale_order_action.xml
@@ -1,6 +1,6 @@
 <odoo>
     <record model="ir.actions.server" id="action_sale_order_compute_taxes">
-        <field name="name">Update taxes with Avatax</field>
+        <field name="name">Update taxes with AvaTax</field>
         <field name="model_id" ref="sale.model_sale_order"/>
         <field name="binding_model_id" ref="sale.model_sale_order" />
         <field name="state">code</field>
