--- a/osi_avatax_connector/views/avalara_salestax_view.xml
+++ b/osi_avatax_connector/views/avalara_salestax_view.xml
@@ -31,7 +31,7 @@
 					<field name="company_code"/>
                                         <field name="date_expiration"/>
 					<a colspan="2" href="https://admin.avalara.com/" target="_blank">Visit the AvaTax Admin webpage</a>
-                                        <button name="%(avatax_connector.action_avalara_salestax_ping)d"
+                                        <button name="%(osi_avatax_connector.action_avalara_salestax_ping)d"
                                                 string="Test Connection" type="action" icon="fa-television"/>
                                     </group>
                                     <group string="Adapter">
