--- a/fieldservice_account_asset/views/fsm_order.xml
+++ b/fieldservice_account_asset/views/fsm_order.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- # Copyright (C) 2019 Open Source Integrators
+     # Copyright (C) 2019 Serpent Consulting Services
+     # License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
 
     <record id="fsm_order_form_inherit" model="ir.ui.view">
@@ -8,7 +10,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='equipment_ids']/tree"
                    position="inside">
-                <button string="RECOVER" name="do_recover"
+                <button string="Recover" name="asset_recover"
                         type="object" class="oe_highlight"/>
             </xpath>
         </field>
