--- a/fieldservice_account_asset/views/fsm_stage_view.xml
+++ b/fieldservice_account_asset/views/fsm_stage_view.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- # Copyright (C) 2019 Open Source Integrators
+     # Copyright (C) 2019 Serpent Consulting Services
+     # License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
 
     <record id="fsm_stage_form_view_inherit" model="ir.ui.view">
