--- a/osi_analytic_segments_purchase_subscription/views/purchase_subscription.xml
+++ b/osi_analytic_segments_purchase_subscription/views/purchase_subscription.xml
@@ -2,7 +2,7 @@
      License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
 
-    <!-- Inherit sale order form -->
+    <!-- Inherit purchase subscription form -->
     <record id="segments_purchase_subscription_form" model="ir.ui.view">
         <field name="name">purchase.subscription.segments</field>
         <field name="model">purchase.subscription</field>
