Fix XML lint warnings

--- a/osi_avatax_connector/views/product_view.xml
+++ b/osi_avatax_connector/views/product_view.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-
         <!--
           Product Tax Code
         -->
@@ -11,7 +9,7 @@
             <field name="model">product.tax.code</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
-                <tree string="Product Tax Code">
+                <tree>
                     <field name="name"/>
                     <field name="description"/>
                     <field name="type"/>
@@ -100,5 +98,4 @@
             </field>
         </record>
 
-    </data>
 </odoo>
