--- a/osi_avatax_connector/views/avalara_salestax_data.xml
+++ b/osi_avatax_connector/views/avalara_salestax_data.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
-    <data noupdate="1">
+<odoo noupdate="1">
 
        <!--
        Partner Exemption Code
@@ -101,5 +100,4 @@
                    <field name="is_avatax">True</field>
                </record>
 
-  </data>
 </odoo>
