--- a/osi_avatax_connector/views/avalara_salestax_view.xml
+++ b/osi_avatax_connector/views/avalara_salestax_view.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-
         <!--
         AvaTax API Configuration in Odoo
         -->
@@ -70,7 +68,7 @@
             <field name="model">avalara.salestax</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
-                <tree string="AvaTax API">
+                <tree>
                     <field name="company_id" groups="base.group_multi_company"/>
                     <field name="company_code"/>
                     <field name="account_number"/>
@@ -97,7 +95,7 @@
             <field name="model">exemption.code</field>
             <field name="type">tree</field>
             <field name="arch" type="xml">
-                <tree string="Exemption Code">
+                <tree>
                     <field name="name"/>
                     <field name="code"/>
                 </tree>
@@ -113,5 +111,4 @@
 
         <menuitem action="action_exemption_code_details" id="menu_action_exemption_code_details" parent="menu_avatax" sequence="25"/>
 
-    </data>
 </odoo>
