--- a/osi_avatax_connector/report/sale_order_templates.xml
+++ b/osi_avatax_connector/report/sale_order_templates.xml
@@ -1,12 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2019 Odoo
+     Copyright (C) 2019 Open Source Integrators
+     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
     <template id="report_saleorder_document" inherit_id="sale.report_saleorder_document">
         <t t-as="amount_by_group" position="replace">
-            <tr style="border-bottom:1px solid #dddddd;">
-                <td><span>Taxes</span></td>
+           <tr style="border-bottom:1px solid #dddddd;">
+                <td><span>Taxes < /span></td>
                 <td class="text-right">
-                    <span t-esc="doc.amount_tax"
-                          t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
+                  <span t-esc="doc.amount_tax"
+                      t-options='{"widget": "monetary", "display_currency": doc.pricelist_id.currency_id}'/>
                 </td>
             </tr>
         </t>
