--- a/osi_avatax_connector/views/sale_order_action.xml
+++ b/osi_avatax_connector/views/sale_order_action.xml
@@ -1,9 +1,14 @@
+<!-- Copyright (C) 2019 Odoo
+     Copyright (C) 2019 Open Source Integrators
+     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
+
     <record model="ir.actions.server" id="action_sale_order_compute_taxes">
         <field name="name">Update taxes with AvaTax</field>
         <field name="model_id" ref="sale.model_sale_order"/>
-        <field name="binding_model_id" ref="sale.model_sale_order" />
+        <field name="binding_model_id" ref="sale.model_sale_order"/>
         <field name="state">code</field>
         <field name="code">records.avalara_compute_taxes()</field>
     </record>
+
 </odoo>
