--- a/osi_avatax_connector/wizard/avalara_salestax_ping_view.xml
+++ b/osi_avatax_connector/wizard/avalara_salestax_ping_view.xml
@@ -1,35 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2019 Odoo
+     Copyright (C) 2019 Open Source Integrators
+     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
-    <data>
 
-        <!-- Ping AvaTax Tax Service -->
+    <!-- Ping AvaTax Tax Service -->
 
-        <record id="view_avalara_salestax_ping" model="ir.ui.view">
-            <field name="name">Test Connection</field>
-            <field name="model">avalara.salestax.ping</field>
-            <field name="arch" type="xml">
-                <form string="Test Connection">
-                    <group>
-                        <field name="name" invisible="1"/>
-			<h4>Connection test successful</h4>
-                    </group>
-                    <footer>
-                        <button special="cancel" class="btn-default" string="OK"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
+    <record id="view_avalara_salestax_ping" model="ir.ui.view">
+        <field name="name">Test Connection</field>
+        <field name="model">avalara.salestax.ping</field>
+        <field name="arch" type="xml">
+            <form string="Test Connection">
+                <group>
+                    <field name="name" invisible="1"/>
+                    <h4>Connection test successful</h4>
+                </group>
+                <footer>
+                    <button special="cancel" class="btn-default" string="OK"/>
+                </footer>
+            </form>
+        </field>
+    </record>
 
-        <record id="action_avalara_salestax_ping" model="ir.actions.act_window">
-            <field name="name">Test Connection</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">avalara.salestax.ping</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">form</field>
-            <field name="view_id" ref="view_avalara_salestax_ping"/>
-            <field name="context">{'record_id': active_id}</field>
-            <field name="target">new</field>
-        </record>
+    <record id="action_avalara_salestax_ping" model="ir.actions.act_window">
+        <field name="name">Test Connection</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">avalara.salestax.ping</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="view_avalara_salestax_ping"/>
+        <field name="context">{'record_id': active_id}</field>
+        <field name="target">new</field>
+    </record>
 
-    </data>
 </odoo>
