--- a/src/custom-addons/osi_check_layout/static/src/less/report_check_middle.less
+++ b/src/custom-addons/osi_check_layout/static/src/less/report_check_middle.less
@@ -1,12 +1,12 @@
 .ckus_middle_page {
     .ckus_stub_1 {
-        top: 0in;
+        top: 0.2in;
     }
     .ckus_check {
-        top: 3.45in;
+        top: 3.8in;
     }
     .ckus_stub_2 {
-        top: 7.0in;
+        top: 7.3in;
     }
 
     .ckus_check .sequence_number {
@@ -15,8 +15,8 @@
         width: 0.7in;
     }
     .ckus_date {
-        top: 0.30in;
-        left: 6.37in;
+        top: 1.1in;
+        left: 4.6in;
         width: 1.47in;
         text-align: center;
     }
@@ -27,15 +27,15 @@
         text-align: left;
     }
     .ckus_amount {
-        top: 0.85in;
-        left: 6.55in;
+        top: 1.1in;
+        right: 0.01in;
         width: 1.08in;
-        text-align: left;
+        text-align: right;
     }
     .ckus_amount_in_word {
-        top: 1.20in;
+        top: 1.30in;
         left: 0.25in;
-        width: 7in;
+        width: 7.0in;
         text-align: left;
         font-weight: bold;
         overflow: hidden;
