--- a/expense_extended/views/expenses_view.xml
+++ b/expense_extended/views/expenses_view.xml
@@ -1,52 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <record id="view_hr_expense_sheet_form" model="ir.ui.view">
         <field name="name">hr.expense.sheet.form</field>
         <field name="model">hr.expense.sheet</field>
         <field eval="25" name="priority"/>
         <field name = "inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='bank_journal_id']" position="replace" />
-            <xpath expr="//field[@name='company_id']" position="after">
-			   <field name="payment_method" options="{'no_open': True, 'no_create': True}"  attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}"/>
-               <field name="bank_journal_id" domain="[('type', 'in', ('cash','bank'))]" options="{'no_open': True, 'no_create': True}" attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}"/>
+            <xpath expr="//field[@name='bank_journal_id']" position="attributes">
+                <attribute name="invisible">1</attribute>
             </xpath>
-			<xpath expr="//field[@name='expense_line_ids']/tree/field[@name='name']" position="after">
+            <xpath expr="//field[@name='company_id']" position="after">
+                <field name="payment_method"
+                       options="{'no_open': True, 'no_create': True}"
+                       attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}"/>
+                <field name="bank_journal_id"
+                       domain="[('type', 'in', ('cash','bank'))]"
+                       options="{'no_open': True, 'no_create': True}"
+                       attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}"/>
+            </xpath>
+            <xpath expr="//field[@name='expense_line_ids']/tree/field[@name='name']" position="after">
                 <field name="payment_method"/>
             </xpath>
-			<xpath expr="//field[@name='employee_id']" position="after">
-			   <field name="emp_manager" readonly="1"/>
+            <xpath expr="//field[@name='employee_id']" position="after">
+                <field name="emp_manager" readonly="1"/>
             </xpath>
         </field>
     </record>
 
-	<!-- Expense Tree View -->
-	<record id="view_hr_expense_sheet_tree_ext" model="ir.ui.view">
+    <!-- Expense Tree View -->
+    <record id="view_hr_expense_sheet_tree_ext" model="ir.ui.view">
         <field name="name">hr.expense.sheet.tree.ext</field>
         <field name="model">hr.expense.sheet</field>
         <field eval="25" name="priority"/>
         <field name = "inherit_id" ref="hr_expense.view_hr_expense_sheet_tree" />
         <field name="arch" type="xml">
-			<xpath expr="//field[@name='employee_id']" position="after">
-			   <field name="emp_manager"/>
+            <xpath expr="//field[@name='employee_id']" position="after">
+                <field name="emp_manager"/>
             </xpath>
         </field>
     </record>
 
-	<!-- Expense Form View -->
-	<record id="view_hr_expense_form_payment" model="ir.ui.view">
+    <!-- Expense Form View -->
+    <record id="view_hr_expense_form_payment" model="ir.ui.view">
         <field name="name">hr.expense.form.payment</field>
         <field name="model">hr.expense</field>
         <field name = "inherit_id" ref="hr_expense.hr_expense_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='description']" position="before">
-				<group>
-	                <field name="payment_method" options="{'no_open': True, 'no_create': True}"  attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}" context="{'default_payment_method': payment_method}" />
-				</group>
+                <group>
+                    <field name="payment_method"
+                           options="{'no_open': True, 'no_create': True}"
+                           attrs="{'required': [('payment_mode', '=', 'company_account')], 'invisible': [('payment_mode', '!=', 'company_account')]}"
+                           context="{'default_payment_method': payment_method}"/>
+                </group>
             </xpath>
-			<button name="action_submit_expenses" position="attributes">
-				<attribute name="context">{"update_hr_expense_sheet":1}</attribute>
-			</button>
+            <button name="action_submit_expenses" position="attributes">
+                <attribute name="context">{"update_hr_expense_sheet":1}</attribute>
+            </button>
         </field>
     </record>
 
@@ -71,4 +81,5 @@
             </field>
         </field>
     </record>
+
 </odoo>
