--- a/helpdesk_stock/views/helpdesk_views.xml
+++ b/helpdesk_stock/views/helpdesk_views.xml
@@ -56,7 +56,8 @@
                             <field name="direction" required="1"/>
                             <field name="route_id"
                                    options="{'no_create': True}"
-                                   groups="stock.group_stock_multi_locations"/>
+                                   groups="stock.group_stock_multi_locations"
+                                   invisible="1"/>
                             <field name="route_ids" invisible="1"/>
                             <field name="product_uom_qty"/>
                             <field name="qty_in_progress"/>
