--- a/helpdesk_stock/views/helpdesk_views.xml
+++ b/helpdesk_stock/views/helpdesk_views.xml
@@ -62,7 +62,7 @@
                             <field name="product_uom_qty"/>
                             <field name="qty_in_progress"/>
                             <field name="qty_done"/>
-                            <field name="expected_date" invisible="1"/>
+                            <field name="expected_date"/>
                             <field name="picking_policy" invisible="1"/>
                             <field name="warehouse_id" invisible="1"/>
                             <field name="location_id" invisible="1"/>
